branches/wip/Archive/46301166c6d597bae19e1ba4f988dc04-d6c803482d553f395422ddf5510f4bb0/output
main.cpp: In function ‘int main()’:
main.cpp:27:15: error: ‘begin’ was not declared in this scope
     begin(subr);
               ^
main.cpp:27:15: note: suggested alternatives:
In file included from /usr/include/c++/4.8/bits/basic_string.h:42:0,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iterator:64,
                 from main.cpp:1:
/usr/include/c++/4.8/initializer_list:89:5: note:   ‘std::begin’
     begin(initializer_list<_Tp> __ils) noexcept
     ^
main.cpp:6:6: note:   ‘ns::begin’
 void begin(T&)
      ^
